增加备案号

--- a/themes/pure/layout/_partial/archive-list.ejs
+++ b/themes/pure/layout/_partial/archive-list.ejs
@@ -9,3 +9,8 @@
     <% }) %>
   </div>
 <% } %>
+<% if(theme.beian) { %>
+	<div class="footer_copyright">
+	    <span><a href='https://beian.miit.gov.cn' target='_blank'><%- theme.beian %></a></span>
+	</div>
+<% } %>
